tests/baselines/reference/classAbstractOverrideWithAbstract.errors.txt
classAbstractOverrideWithAbstract.ts(19,7): error TS2515: Non-abstract class 'CC' does not implement inherited abstract member foo from class 'BB'.


==== classAbstractOverrideWithAbstract.ts (1 errors) ====
    class A {
        foo() {}
    }
    
    abstract class B extends A {
        abstract foo();
    }
    
    abstract class AA {
        foo() {}
        abstract bar();
    }
    
    abstract class BB extends AA {
        abstract foo();
        bar () {}
    }
    
    class CC extends BB {} // error
          ~~
!!! error TS2515: Non-abstract class 'CC' does not implement inherited abstract member foo from class 'BB'.
    
    class DD extends BB {
        foo() {}
    }